roles/iptables/files/iptables
# sample configuration for iptables service
# you can edit this manually or use system-config-firewall
# please do not ask us to add additional ports/services to this default configuration
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
#-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j ACCEPT
COMMIT
*nat
-A PREROUTING -p tcp --dport 8080 -j DNAT --to-destination 192.168.10.2:80
-A POSTROUTING --destination 192.168.10.2 -j SNAT --to-source 192.168.255.2
COMMIT
*mangle
-A FORWARD -p tcp --dport 80 -j ACCEPT
-A POSTROUTING -p tcp -j ACCEPT
COMMIT
